# subgraph-template-ariadne-fastapi

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: check-schema.yml  publish-schema.yml  test.yml
api/: schema.graphql  schema.py
tests/api/: test_query.py
